{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 30,
  "lineage": "70372d64-6585-1943-142d-536f3a9d6f41",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minecraft_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1bae6c3bedcc3b5",
            "arn": "arn:aws:ec2:us-east-1:738334620427:instance/i-0402475d82c7d266a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0402475d82c7d266a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "minecraft_server_keypair",
            "launch_template": [
              {
                "id": "lt-0a5cfe43b2d6e9dd0",
                "name": "minecraft_server_template",
                "version": "$Default"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02173b1de52f3eba5",
            "private_dns": "ip-192-168-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.29",
            "public_dns": "ec2-18-206-209-78.compute-1.amazonaws.com",
            "public_ip": "18.206.209.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e10c016dec52b803",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f14ee2fa41618557",
            "tags": {
              "Name": "minecraft server vm"
            },
            "tags_all": {
              "Name": "minecraft server vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077bb2f10f0a5b2af"
            ]
          },
          "dependencies": [
            "aws_key_pair.minecraft_server_keypair",
            "aws_launch_template.minecraft_server_template",
            "aws_security_group.minecraft_server_sg",
            "aws_subnet.minecraft_server_public_subnet",
            "aws_vpc.minecraft_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "minecraft_server_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738334620427:internet-gateway/igw-04e9a0478cca53310",
            "id": "igw-04e9a0478cca53310",
            "owner_id": "738334620427",
            "tags": {
              "Name": "minecraft_server_igw"
            },
            "tags_all": {
              "Name": "minecraft_server_igw"
            },
            "vpc_id": "vpc-024d0be1f2a426728"
          },
          "dependencies": [
            "aws_vpc.minecraft_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "minecraft_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738334620427:route-table/rtb-013d1c301ff56f949",
            "id": "rtb-013d1c301ff56f949",
            "owner_id": "738334620427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e9a0478cca53310",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "minecraft_server_rt"
            },
            "tags_all": {
              "Name": "minecraft_server_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-024d0be1f2a426728"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.minecraft_server_igw",
            "aws_vpc.minecraft_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "minecraft_server_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05132c608121592e4",
            "route_table_id": "rtb-013d1c301ff56f949",
            "subnet_id": "subnet-0f14ee2fa41618557"
          },
          "dependencies": [
            "aws_internet_gateway.minecraft_server_igw",
            "aws_route_table.minecraft_server_rt",
            "aws_subnet.minecraft_server_public_subnet",
            "aws_vpc.minecraft_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "minecraft_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738334620427:security-group/sg-077bb2f10f0a5b2af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077bb2f10f0a5b2af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "minecraft_server_sg",
            "name_prefix": "",
            "owner_id": "738334620427",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024d0be1f2a426728"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.minecraft_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "minecraft_server_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738334620427:subnet/subnet-0f14ee2fa41618557",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f14ee2fa41618557",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "738334620427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minecraft_server_public_subnet"
            },
            "tags_all": {
              "Name": "minecraft_server_public_subnet"
            },
            "vpc_id": "vpc-024d0be1f2a426728"
          },
          "dependencies": [
            "aws_vpc.minecraft_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "minecraft_server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738334620427:vpc/vpc-024d0be1f2a426728",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02625728ed3569ca8",
            "default_route_table_id": "rtb-0be8b922b39c50bb1",
            "default_security_group_id": "sg-0b5bbce4f498ee91a",
            "dhcp_options_id": "dopt-0bbe3b6bada74d76a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024d0be1f2a426728",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be8b922b39c50bb1",
            "owner_id": "738334620427",
            "tags": {
              "Name": "minecraft_server_vpc"
            },
            "tags_all": {
              "Name": "minecraft_server_vpc"
            }
          }
        }
      ]
    }
  ]
}